# rocketwatch

./: .dockerignore  .gitignore  .gitmodules  .pep8speaks.yml  .pre-commit-config.yaml  README.md  compose.profiling.yaml  compose.yaml  pyproject.toml
.claude/: settings.json
.github/: renovate.json
.github/workflows/: build.yml  ci.yaml  ci.yml  codeql-analysis.yml  docker-ci.yml  lint.yml  test.yml
rocketwatch/: Dockerfile  __init__.pyi  __main__.py  bot.py  config.toml.sample  main.cfg.sample  requirements.txt  rocketwatch.py  strings.py
rocketwatch/contracts/: BalancerV3Vault.abi.json  GPv2Settlement.abi.json  RockSolidVault.abi.json  UniswapV2Pair.abi.json  UniswapV4PoolManager.abi.json  UniswapV4StateView.abi.json
rocketwatch/plugins/8ball/: 8ball.py
rocketwatch/plugins/about/: about.py
rocketwatch/plugins/activity/: activity.py
rocketwatch/plugins/apr/: apr.py
rocketwatch/plugins/ask_doofus/: ask_doofus.py
rocketwatch/plugins/beacon_events/: beacon_events.py
rocketwatch/plugins/beacon_states/: beacon_states.py
rocketwatch/plugins/call/: call.py
rocketwatch/plugins/chat_summary/: chat_summary.py
rocketwatch/plugins/chicken_soup/: chicken_soup.py
rocketwatch/plugins/collateral/: collateral.py
rocketwatch/plugins/commissions/: commissions.py
rocketwatch/plugins/constellation/: constellation.py
rocketwatch/plugins/core/: core.py
rocketwatch/plugins/cow_orders/: cow_orders.py
rocketwatch/plugins/dao/: dao.py
rocketwatch/plugins/dao_transfers/: dao_transfers.py
rocketwatch/plugins/db_upkeep_task/: db_upkeep_task.py
rocketwatch/plugins/debug/: debug.py
rocketwatch/plugins/delegate_contracts/: delegate_contracts.py
rocketwatch/plugins/deposit_pool/: deposit_pool.py
rocketwatch/plugins/detect_scam/: detect_scam.py
rocketwatch/plugins/dex_trades/: dex_trades.py
rocketwatch/plugins/event_core/: event_core.py
rocketwatch/plugins/events/: events.json  events.py
rocketwatch/plugins/fee_distribution/: fee_distribution.py
rocketwatch/plugins/forum/: forum.py
rocketwatch/plugins/governance/: governance.py
rocketwatch/plugins/karma/: karma.py
rocketwatch/plugins/log_events/: aggregation.py  event_definitions.py  log_events.py
rocketwatch/plugins/lottery/: lottery.py
rocketwatch/plugins/metrics/: metrics.py
rocketwatch/plugins/milestones/: milestones.json  milestones.py
rocketwatch/plugins/minipool_delegates/: minipool_delegates.py
rocketwatch/plugins/minipool_distribution/: minipool_distribution.py
rocketwatch/plugins/minipool_states/: minipool_states.py
rocketwatch/plugins/minipool_task/: minipool_task.py
rocketwatch/plugins/minipools_upkeep_task/: minipools_upkeep_task.py
rocketwatch/plugins/node_task/: node_task.py
rocketwatch/plugins/odao_monitor/: odao_monitor.py
rocketwatch/plugins/pinned_messages/: pinned_messages.py
rocketwatch/plugins/proposals/: proposals.py
rocketwatch/plugins/queue/: queue.py
rocketwatch/plugins/random/: random.py
rocketwatch/plugins/releases/: releases.py
rocketwatch/plugins/reloader/: reloader.py
rocketwatch/plugins/rewards/: rewards.py
rocketwatch/plugins/rocketnode/: rocketnode.py
rocketwatch/plugins/rocksolid/: rocksolid.py
rocketwatch/plugins/rpips/: rpips.py
rocketwatch/plugins/rpl/: rpl.py
rocketwatch/plugins/scam_detection/: checks.py  common.py  llm_check.py  message_report.py  partner_sync.py  scam_detection.py  thread_report.py  user_report.py  utils.py  views.py
rocketwatch/plugins/scam_warning/: scam_warning.py
rocketwatch/plugins/snapshot/: snapshot.py
rocketwatch/plugins/sorting_hat/: sorting_hat.py
rocketwatch/plugins/support_utils/: support_utils.py
rocketwatch/plugins/transactions/: events.py  functions.json  transactions.py
rocketwatch/plugins/transcription/: pipeline.py  recorder.py  transcription.py
rocketwatch/plugins/tvl/: tvl.py
rocketwatch/plugins/twitter_embed/: twitter_embed.py
rocketwatch/plugins/tx_events/: event_definitions.py  tx_events.py
rocketwatch/plugins/user_distribute/: user_distribute.py
rocketwatch/plugins/validator_states/: validator_states.py
rocketwatch/plugins/voice_summary/: pipeline.py  recorder.py  session.py  voice_summary.py
rocketwatch/strings/: addresses.en.json  embeds.en.json
rocketwatch/utils/: address_labels.py  block_time.py  cached_ens.py  cfg.py  command_tree.py  config.py  dao.py  embeds.py  ens.py  etherscan.py  etherscan_labels.py  event.py  event_logs.py  file.py  image.py  liquidity.py  llm.py  readable.py  retry.py  rocketpool.py  sea_creatures.py  sentinel.py  shared_w3.py  solidity.py  status.py  time_debug.py  type_markers.py  views.py  visibility.py
sentinel/: Dockerfile  README.md  __main__.py  audit.py  bot.py  compose.yaml  config.py  config.toml.sample  guardrails.py  pyproject.toml  server.py
tests/: conftest.py  message_samples.json  test_address_labels.py  test_apr.py  test_block_time.py  test_cfg.py  test_detect_scam.py  test_embeds.py  test_harness_smoke.py  test_liquidity.py  test_llm.py  test_plugin_imports.py  test_readable.py  test_scam_detection.py  test_scripted_rocketpool.py  test_sea_creatures.py  test_should_load_plugin.py  test_solidity.py  test_wall.py
tests/integration/: test_mongo_smoke.py  test_scam_detection_x_sentinel.py
tests/lib/: beacon_script.py  cfg.py  discord_harness.py  event_log_script.py  scam_detection_harness.py  scripted_rocketpool.py
tests/rocketwatch/: message_samples.json  test_address_labels.py  test_beacon_script.py  test_cfg.py  test_command_tree.py  test_dao.py  test_embeds.py  test_event.py  test_event_log_script.py  test_event_logs.py  test_harness_smoke.py  test_liquidity.py  test_llm.py  test_plugin_imports.py  test_readable.py  test_rocketpool.py  test_scam_detection.py  test_scripted_rocketpool.py  test_sea_creatures.py  test_shared_w3.py  test_type_markers.py  test_views.py  test_voice_recorder.py  test_wall.py
tests/sentinel/: conftest.py  helpers.py  test_audit.py  test_client.py  test_config.py  test_guardrails.py  test_server.py
tests/support/: discord_harness.py  scripted_rocketpool.py
(+48 files in other folders)
