[project]
name = "rocketwatch"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.5",
    "anthropic>=0.52.0,<1.0.0",
    "google-genai>=2.6.0,<2.7.0",
    "openai>=1.0.0,<3.0.0",
    "aiocache==0.12.3",
    "anyascii==0.3.3",
    "beautifulsoup4==4.14.3",
    "bidict==0.23.1",
    "cachetools==7.1.3",
    "colorama==0.4.6",
    "cronitor==4.9.0",
    "discord.py[voice]==2.7.1",
    "discord-ext-voice-recv>=0.5.0",
    "eth-typing==6.0.0",
    "eth-utils==6.0.0",
    "graphql_query==1.4.0",
    "hexbytes==1.3.1",
    "humanize==4.15.0",
    "lameenc>=1.8.2",
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "pillow==12.2.0",
    "psutil==7.2.2",
    "pydantic>=2.0.0,<3.0.0",
    "pymongo==4.17.0",
    "pytz==2026.2",
    "regex==2026.5.9",
    "retry-async==0.1.4",
    "soundfile>=0.13.1",
    "tabulate==0.10.0",
    "termplotlib==0.3.9",
    "uptime==3.0.1",
    "web3>=7.0.0,<8.0.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=rocketwatch --cov=sentinel --cov-fail-under=55"
markers = [
    "integration_db: requires a Mongo instance (testcontainers)",
    "integration_chain: requires a forked anvil node",
    "integration_beacon: requires recorded beacon API responses",
]
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning",
    "ignore:'count' is passed as positional argument:DeprecationWarning",
    "ignore:'return' in a 'finally' block:SyntaxWarning",
]

[tool.coverage.run]
source = ["rocketwatch", "sentinel"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
strict = true
disallow_untyped_calls = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "aiocache", "aiocache.*",
    "ens", "ens.*",
    "retry_async", "retry_async.*",
    "termplotlib", "termplotlib.*",
    "cronitor", "cronitor.*",
    "uptime", "uptime.*",
    "lameenc", "lameenc.*",
    "soundfile", "soundfile.*",
    "testcontainers", "testcontainers.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP", "W"]
ignore = ["E501", "E203", "E231"]

[tool.ruff.lint.isort]
known-first-party = ["rocketwatch", "sentinel"]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "testcontainers[mongodb]>=4.0.0",
]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
    "types-cachetools>=6.2.0.20260317",
    "types-colorama>=0.4.15.20250801",
    "types-psutil>=7.2.2.20260402",
    "types-pytz>=2026.1.1.20260304",
    "types-regex>=2026.3.32.20260329",
    "types-tabulate>=0.10.0.20260308",
]
