[project]
name = "sentinel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.5",
    "discord.py==2.7.1",
    "pydantic>=2.0.0,<3.0.0",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
strict = true

[tool.ruff]
extend = "../pyproject.toml"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
]
